fixed alignment of text in drop down menu

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -159,13 +159,14 @@ body {
     }
     .menu-ctn > li {
       display: flex;
-      justify-content: space-evenly;
+      justify-content: space-between;
       flex-direction: row;
       background-color: white;
       padding: 16px 19px 16px 24px;
       box-shadow: 0px 2px 9px rgba(0, 0, 0, 0.0532439);
       border-radius: 5px;
       width: 100%;
+      text-align: left;
       position: relative;
     }
 
@@ -176,16 +177,27 @@ body {
       display: none;
       position: absolute;
       width: 100%;
-      top: 100%;
+      top: 108%;
       left: 0;
       background-color: white;
       z-index: 1;
-      text-align: center;
+      text-align: left;
+
+      border-radius: 5px;
 
       li {
         padding: 10px 15px;
-        transition: all 0.3s ease;
+        transition: background-color 0.3s ease;
         background-color: white;
+        box-shadow: 0px 2px 9px rgba(0, 0, 0, 0.0532439);
+
+        padding-left: 24px;
+      }
+      li:first-child {
+        border-radius: 5px 5px 0 0;
+      }
+      li:last-child {
+        border-radius: 0 0 5px 5px;
       }
       li:hover {
         background-color: #b2b2b2;
